fixed small issues,tweet btn svg alignment,updated twitter blue icon,fixed scrolling behaviours for outside sections

--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -134,6 +134,7 @@ li {
 		order: unset;
 		overflow-y: auto;
 		justify-content: space-between;
+		top:0;
 	}
 	@media only screen and(600px<=width) {
 		padding: 0;
@@ -156,6 +157,7 @@ li {
 	@media screen and (1008px<=width) {
 		width: 88px;
 		flex:1 0 auto;
+		overflow-y: hidden;
 	}
 	@media screen and (1025px<=width) {
 		width: 96.5px;
@@ -373,9 +375,9 @@ button:hover {
 	}
 }
 .tweet-circular-btn-wrapper {
-	width: 50px;
-	height: 50px;
-
+	width: 100%;
+	height: 100%;
+	display: flex;
 	justify-content: center;
 	align-items: center;
 	box-sizing: content-box;
@@ -820,6 +822,8 @@ button:hover {
 	display: none;
 
 	@media screen and(688px<=width) {
+		position: sticky;
+		top:0;
 		display: flex;
 		width: auto;
 		flex: 2 1 auto;
